--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         /* Header & Navigation */
         header {
-            background: linear-gradient(135deg, #2c5f2d 0%, #97bc62 100%);
+            background: linear-gradient(135deg, #1e3a8a 0%, #3b82f6 100%);
             color: white;
             padding: 1rem 0;
             position: fixed;
@@ -62,17 +62,50 @@
 
         /* Hero Section */
         .hero {
-            background: linear-gradient(135deg, #2c5f2d 0%, #97bc62 100%);
+            background: linear-gradient(135deg, #1e3a8a 0%, #3b82f6 50%, #8b5cf6 100%);
             color: white;
             padding: 8rem 2rem 4rem;
             text-align: center;
             margin-top: 60px;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .hero::before {
+            content: '';
+            position: absolute;
+            top: -50%;
+            right: -10%;
+            width: 500px;
+            height: 500px;
+            background: radial-gradient(circle, rgba(236, 72, 153, 0.3) 0%, transparent 70%);
+            border-radius: 50%;
+            animation: float 20s infinite ease-in-out;
+        }
+
+        .hero::after {
+            content: '';
+            position: absolute;
+            bottom: -30%;
+            left: -5%;
+            width: 400px;
+            height: 400px;
+            background: radial-gradient(circle, rgba(139, 92, 246, 0.3) 0%, transparent 70%);
+            border-radius: 50%;
+            animation: float 15s infinite ease-in-out reverse;
+        }
+
+        @keyframes float {
+            0%, 100% { transform: translate(0, 0); }
+            50% { transform: translate(30px, 30px); }
         }
 
         .hero h2 {
             font-size: 3rem;
             margin-bottom: 1rem;
             font-weight: 700;
+            position: relative;
+            z-index: 1;
         }
 
         .hero p {
@@ -80,6 +113,8 @@
             max-width: 800px;
             margin: 0 auto 2rem;
             opacity: 0.95;
+            position: relative;
+            z-index: 1;
         }
 
         /* Section Styling */
@@ -92,8 +127,8 @@
         h3 {
             font-size: 2.5rem;
             margin-bottom: 1rem;
-            color: #2c5f2d;
-            border-bottom: 3px solid #97bc62;
+            color: #1e3a8a;
+            border-bottom: 3px solid #ec4899;
             padding-bottom: 0.5rem;
             display: inline-block;
         }
@@ -110,13 +145,26 @@
         .profile-placeholder {
             width: 100%;
             aspect-ratio: 1;
-            background: linear-gradient(135deg, #e8f5e9 0%, #c5e1a5 100%);
+            background: linear-gradient(135deg, #dbeafe 0%, #e9d5ff 100%);
             border-radius: 10px;
             display: flex;
             align-items: center;
             justify-content: center;
             font-size: 4rem;
-            color: #2c5f2d;
+            color: #1e3a8a;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .profile-placeholder::before {
+            content: '';
+            position: absolute;
+            top: -20%;
+            right: -20%;
+            width: 200px;
+            height: 200px;
+            background: radial-gradient(circle, rgba(236, 72, 153, 0.2) 0%, transparent 70%);
+            border-radius: 50%;
         }
 
         .bio p {
@@ -134,27 +182,49 @@
         }
 
         .research-card {
-            background: #f9f9f9;
+            background: linear-gradient(135deg, #f0f9ff 0%, #faf5ff 100%);
             padding: 2rem;
             border-radius: 10px;
-            border-left: 4px solid #2c5f2d;
+            border-left: 4px solid #3b82f6;
             transition: transform 0.3s, box-shadow 0.3s;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .research-card::before {
+            content: '';
+            position: absolute;
+            top: -50%;
+            right: -50%;
+            width: 100px;
+            height: 100px;
+            background: radial-gradient(circle, rgba(139, 92, 246, 0.1) 0%, transparent 70%);
+            border-radius: 50%;
+            transition: transform 0.3s;
         }
 
         .research-card:hover {
             transform: translateY(-5px);
-            box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+            box-shadow: 0 10px 25px rgba(59, 130, 246, 0.2);
+        }
+
+        .research-card:hover::before {
+            transform: translate(-20px, -20px) scale(1.5);
         }
 
         .research-card h4 {
-            color: #2c5f2d;
+            color: #1e3a8a;
             font-size: 1.5rem;
             margin-bottom: 1rem;
+            position: relative;
+            z-index: 1;
         }
 
         .research-card p {
             color: #666;
             line-height: 1.7;
+            position: relative;
+            z-index: 1;
         }
 
         /* Accomplishments */
@@ -167,37 +237,82 @@
             padding: 2rem;
             margin-bottom: 1.5rem;
             border-radius: 10px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.05);
-            border-left: 4px solid #97bc62;
+            box-shadow: 0 2px 10px rgba(59, 130, 246, 0.1);
+            border-left: 4px solid #8b5cf6;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .accomplishment-item::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            right: 0;
+            width: 100px;
+            height: 100px;
+            background: radial-gradient(circle, rgba(236, 72, 153, 0.05) 0%, transparent 70%);
+            border-radius: 50%;
         }
 
         .accomplishment-item h4 {
-            color: #2c5f2d;
+            color: #1e3a8a;
             font-size: 1.3rem;
             margin-bottom: 0.5rem;
+            position: relative;
+            z-index: 1;
         }
 
         .accomplishment-item .year {
-            color: #97bc62;
+            color: #ec4899;
             font-weight: 600;
             font-size: 0.95rem;
             margin-bottom: 0.5rem;
             display: block;
+            position: relative;
+            z-index: 1;
         }
 
         .accomplishment-item p {
             color: #666;
             line-height: 1.6;
+            position: relative;
+            z-index: 1;
         }
 
         /* Contact Section */
         #contact {
-            background: #f5f5f5;
+            background: linear-gradient(135deg, #eff6ff 0%, #fdf4ff 100%);
+            position: relative;
+            overflow: hidden;
+        }
+
+        #contact::before {
+            content: '';
+            position: absolute;
+            top: -10%;
+            left: -5%;
+            width: 300px;
+            height: 300px;
+            background: radial-gradient(circle, rgba(59, 130, 246, 0.1) 0%, transparent 70%);
+            border-radius: 50%;
+        }
+
+        #contact::after {
+            content: '';
+            position: absolute;
+            bottom: -15%;
+            right: -5%;
+            width: 350px;
+            height: 350px;
+            background: radial-gradient(circle, rgba(236, 72, 153, 0.1) 0%, transparent 70%);
+            border-radius: 50%;
         }
 
         .contact-content {
             text-align: center;
             margin-top: 2rem;
+            position: relative;
+            z-index: 1;
         }
 
         .contact-content p {
@@ -214,23 +329,24 @@
         }
 
         .contact-button {
-            background: #2c5f2d;
+            background: linear-gradient(135deg, #3b82f6 0%, #8b5cf6 100%);
             color: white;
             padding: 1rem 2rem;
             text-decoration: none;
             border-radius: 5px;
             font-weight: 600;
-            transition: background 0.3s;
+            transition: transform 0.3s, box-shadow 0.3s;
             display: inline-block;
         }
 
         .contact-button:hover {
-            background: #1e4620;
+            transform: translateY(-2px);
+            box-shadow: 0 5px 15px rgba(59, 130, 246, 0.4);
         }
 
         /* Footer */
         footer {
-            background: #2c5f2d;
+            background: linear-gradient(135deg, #1e3a8a 0%, #3b82f6 100%);
             color: white;
             text-align: center;
             padding: 2rem;
@@ -269,7 +385,7 @@
     <!-- Navigation -->
     <header>
         <nav>
-            <h1>Your Name</h1>
+            <h1>Abigail Merolle (She | Her)</h1>
             <ul>
                 <li><a href="#about">About</a></li>
                 <li><a href="#research">Research</a></li>
