Revise profile section with image and updated bio
Updated the profile section with an image and revised bio text to reflect current expertise and interests.

--- a/index.html
+++ b/index.html
@@ -405,11 +405,12 @@
     <section id="about">
         <h3>About Me</h3>
         <div class="about-content">
-            <div class="profile-placeholder">🌱</div>
+            <div class="profile-placeholder">
+    <img src="https://drive.google.com/drive/folders/11cVj353GU9sYGdgZXGiTNDVe89CEp1sG" alt="Your Name" style="width: 100%; height: 100%; object-fit: cover; border-radius: 10px;">
+</div>
             <div class="bio">
-                <p>I am a dedicated environmental justice researcher and climate resilience specialist committed to addressing the intersection of environmental issues and social equity. My work focuses on developing inclusive strategies that protect vulnerable communities from climate impacts while promoting sustainable development.</p>
-                <p>With expertise in community-based participatory research, climate adaptation planning, and environmental policy analysis, I work to ensure that climate solutions benefit everyone, especially those most affected by environmental injustice.</p>
-                <p>My approach combines rigorous scientific research with grassroots advocacy, believing that meaningful climate action must center the voices and needs of frontline communities.</p>
+                <p>Climate resilience specialist with local government experience and expertise in municipal sustainability projects, stakeholder engagement, and climate action. My work spans from urban climate initiatives to sustainable agriculture systems. </p>
+                <p>I am particularly interested in equitable approaches to climate resilience in coastal and agricultural communities, and believe that relationship building and co-learning are essential for supporting communities as they implement sustainable practices and adapt to climate change impacts.</p>
             </div>
         </div>
     </section>
