Fix image tag by removing unnecessary alt attribute

--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
         <h3>About Me</h3>
         <div class="about-content">
             <div class="profile-placeholder">
-    <img src="https://drive.google.com/drive/folders/11cVj353GU9sYGdgZXGiTNDVe89CEp1sG" alt="Your Name" style="width: 100%; height: 100%; object-fit: cover; border-radius: 10px;">
+    <img src="https://drive.google.com/drive/folders/11cVj353GU9sYGdgZXGiTNDVe89CEp1sG" style="width: 100%; height: 100%; object-fit: cover; border-radius: 10px;">
 </div>
             <div class="bio">
                 <p>Climate resilience specialist with local government experience and expertise in municipal sustainability projects, stakeholder engagement, and climate action. My work spans from urban climate initiatives to sustainable agriculture systems. </p>
