Update profile name, image, and bio content
Updated header name and profile image source. Revised bio for clarity and detail.

--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
     <!-- Navigation -->
     <header>
         <nav>
-            <h1>Abigail Merolle (She | Her)</h1>
+            <h1>Your Name</h1>
             <ul>
                 <li><a href="#about">About</a></li>
                 <li><a href="#research">Research</a></li>
@@ -406,12 +406,12 @@
         <h3>About Me</h3>
         <div class="about-content">
             <div class="profile-placeholder">
-   <div class="profile-placeholder">
-    <img src="profile.jpg" alt="Your Name" style="width: 100%; height: 100%; object-fit: cover; border-radius: 10px;">
-</div>
+                <img src="https://drive.google.com/uc?export=view&id=1trpWlpANFPFATVwrZGERHwXICWat4rYi" alt="Profile Photo" style="width: 100%; height: 100%; object-fit: cover; border-radius: 10px;">
+            </div>
             <div class="bio">
-                <p>Climate resilience specialist with local government experience and expertise in municipal sustainability projects, stakeholder engagement, and climate action. My work spans from urban climate initiatives to sustainable agriculture systems. </p>
-                <p>I am particularly interested in equitable approaches to climate resilience in coastal and agricultural communities, and believe that relationship building and co-learning are essential for supporting communities as they implement sustainable practices and adapt to climate change impacts.</p>
+                <p>I am a climate resilience specialist with local government experience and expertise in municipal sustainability projects, stakeholder engagement, and climate action. My work spans from urban climate initiatives to sustainable agriculture systems.</p>
+                <p>I am particularly interested in equitable approaches to climate resilience in coastal and agricultural communities. I believe that relationship building and co-learning are essential for supporting communities as they implement sustainable practices and adapt to climate change impacts.</p>
+                <p>Through collaborative partnerships and community-centered approaches, I work to develop resilience strategies that are both scientifically grounded and locally responsive, ensuring that climate solutions serve the diverse needs of the communities most affected by environmental change.</p>
             </div>
         </div>
     </section>
