--- a/index.html
+++ b/index.html
@@ -422,19 +422,19 @@
         <div class="research-grid">
             <div class="research-card">
                 <h4>🌍 Environmental Justice</h4>
-                <p>Investigating the disproportionate environmental burdens faced by marginalized communities and developing equitable policy frameworks that address systemic inequalities in environmental protection and resource distribution.</p>
+                <p>My journey into environmental justice began with undergraduate studies in biological conservation management and agroecology, with aspirations of becoming a restoration ecologist. However, as I learned more about industrial agriculture, I became increasingly interested in its impacts on surrounding communities and the complex trade-offs farmers face when securing their livelihoods while adapting to climate change. This interest deepened through NSF-funded research on climate adaptation in Ugandan bean farms and my work as a laboratory technician testing water quality for agricultural nutrients. These experiences led me to the University of Michigan's School for Environment and Sustainability, where I focused on water governance and equitable climate adaptation, while also exploring energy justice, carceral justice, and Indigenous rights.</p>
             </div>
             <div class="research-card">
                 <h4>🌊 Climate Resilience</h4>
-                <p>Designing adaptive strategies that strengthen community capacity to withstand and recover from climate-related disasters, with emphasis on nature-based solutions and community-led resilience planning.</p>
+                <p>Through my graduate research and positions with the Cooperative Institute for Great Lakes Research (CIGLR) and GLISA -- A NOAA CAP Team, I have focused on flood mitigation strategies in the Midwest. My work emphasizes strengthening community capacity to withstand and recover from climate-related disasters through nature-based solutions and community-led resilience planning approaches.</p>
             </div>
             <div class="research-card">
                 <h4>🏘️ Urban Sustainability</h4>
-                <p>Examining sustainable urban development practices that reduce environmental impacts while improving quality of life, including green infrastructure, renewable energy access, and equitable urban planning.</p>
+                <p>My work has allowed me to explore sustainable urban development practices that reduce environmental impacts while improving quality of life. This includes examining green infrastructure implementation, renewable energy access and equity, and equitable urban planning approaches that center community needs.</p>
             </div>
             <div class="research-card">
                 <h4>📊 Policy Analysis</h4>
-                <p>Evaluating environmental policies through an equity lens, analyzing their impacts on diverse communities, and recommending evidence-based improvements to advance both environmental and social justice goals.</p>
+                <p>I evaluate environmental policies through an equity lens, analyzing their impacts on diverse communities and recommending evidence-based improvements to advance both environmental and social justice goals. My focus areas include Indigenous rights and sovereignty, Great Lakes water quality (particularly the Line 5 pipeline controversy), drinking water access, and energy justice.</p>
             </div>
         </div>
     </section>
